fix ie scrollbar disappearing

--- a/css/custom-theme.css
+++ b/css/custom-theme.css
@@ -1,3 +1,8 @@
+/* fix IE scrollbars */
+@-ms-viewport{
+	width:auto!important
+}
+
 .btn-file {
 	position: relative;
 	overflow: hidden;
